added signup form submission handler and UI

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,12 @@ PUBLIC_SANITY_DATASET=''
 
 # Records API
 PUBLIC_RECORDS_API=''
+
+# Google Sheets Service Account credentials
+GOOGLE_APPLICATION_CREDENTIALS_JSON=''
+
+# ID of Google Sheet where contact form submissions will be saved
+GOOGLE_SHEET_ID=XXX
+
+# Tab ID in above Google Sheet
+GOOGLE_SHEET_TAB_ID=OpenElectricity
