--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"sveltekit-sprite": "^0.1.2",
 		"tailwindcss": "^3.3.3",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
 	"type": "module",
 	"dependencies": {
-		"js-base64": "^3.7.5"
+		"date-fns": "^2.30.0",
+		"js-base64": "^3.7.5",
+		"uuid": "^9.0.1"
 	}
 }
