--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sanity/image-url": "^1.0.2",
+		"chroma-js": "^2.4.2",
 		"date-fns": "^2.30.0",
 		"js-base64": "^3.7.5",
 		"uuid": "^9.0.1",
