--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Base URL, for locking down proxied API requests
+BASE_URL=localhost:5173
+
 # Sanity details
 PUBLIC_SANITY_PROJECT_ID=''
 PUBLIC_SANITY_DATASET=''
@@ -13,3 +16,12 @@ GOOGLE_SHEET_ID=XXX
 
 # Tab ID in above Google Sheet
 GOOGLE_SHEET_TAB_ID=OpenElectricity
+
+# Basic auth
+ADMIN_LOGIN=''
+
+# JSONs
+PUBLIC_JSON_API=''
+PUBLIC_FLOWS_API=''
+PUBLIC_EMISSIONS_API=''
+PUBLIC_PRICE_API=''
