--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
 		"@sveltejs/kit": "^1.20.4",
 		"@tailwindcss/forms": "^0.5.6",
 		"@tailwindcss/typography": "^0.5.10",
+		"@types/d3-format": "^3.0.4",
+		"@types/d3-scale": "^4.0.8",
+		"@types/d3-shape": "^3.1.6",
+		"@types/d3-time-format": "^4.0.3",
 		"autoprefixer": "^10.4.16",
 		"date-fns": "^3.0.6",
 		"eslint": "^8.28.0",
