Feature/isp tracker (#6)
* setup

* Update index.js

* add date-fns

* transform isp data to time series format

* add layercake package

* Update package-lock.json

* upgrade date-fns to v3

* Update .env.example

* Update Nav.svelte

* implement xAxis, yAxis and Line chart components

* implement area chart

* implement stacked area

* add d3 types

* isp charts

* first cut of homepage isp view

* Update colours.js

* Update fuel_tech.types.ts

* refactor

* Update colours.js

--- a/package.json
+++ b/package.json
@@ -19,10 +19,16 @@
 		"@sveltejs/kit": "^1.20.4",
 		"@tailwindcss/forms": "^0.5.6",
 		"@tailwindcss/typography": "^0.5.10",
+		"@types/d3-format": "^3.0.4",
+		"@types/d3-scale": "^4.0.8",
+		"@types/d3-shape": "^3.1.6",
+		"@types/d3-time-format": "^4.0.3",
 		"autoprefixer": "^10.4.16",
+		"date-fns": "^3.0.6",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"layercake": "^8.0.2",
 		"postcss": "^8.4.31",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
@@ -36,7 +42,6 @@
 	"dependencies": {
 		"@sanity/image-url": "^1.0.2",
 		"chroma-js": "^2.4.2",
-		"date-fns": "^2.30.0",
 		"js-base64": "^3.7.5",
 		"uuid": "^9.0.1",
 		"wcag-color": "^1.1.1"
