--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		"@types/d3-scale": "^4.0.8",
 		"@types/d3-shape": "^3.1.6",
 		"autoprefixer": "^10.4.16",
+		"d3-array": "^3.2.4",
+		"d3-interpolate": "^3.0.1",
 		"date-fns": "^3.0.6",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
