clean up and update/add date-fns/date-fns-tz packages

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"autoprefixer": "^10.4.16",
 		"d3-array": "^3.2.4",
 		"d3-interpolate": "^3.0.1",
-		"date-fns": "^3.0.6",
+		"date-fns": "^2.30.0",
+		"date-fns-tz": "^2.0.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
