--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/kit": "^1.20.4",
 		"@tailwindcss/forms": "^0.5.6",
 		"@tailwindcss/typography": "^0.5.10",
+		"@types/chroma-js": "^2.4.4",
 		"@types/d3-format": "^3.0.4",
 		"@types/d3-scale": "^4.0.8",
 		"@types/d3-shape": "^3.1.6",
@@ -44,7 +45,9 @@
 	"dependencies": {
 		"@sanity/image-url": "^1.0.2",
 		"chroma-js": "^2.4.2",
+		"install": "^0.13.0",
 		"js-base64": "^3.7.5",
+		"npm": "^10.4.0",
 		"uuid": "^9.0.1",
 		"wcag-color": "^1.1.1"
 	}
