--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"release": "release-it"
 	},
 	"devDependencies": {
+		"@changesets/cli": "^2.27.1",
 		"@portabletext/svelte": "^2.1.3",
 		"@sanity/client": "^6.5.0",
 		"@sanity/image-url": "^1.0.2",
@@ -39,7 +40,6 @@
 		"postcss": "^8.4.31",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
-		"release-it": "^17.1.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.4.1",
@@ -47,16 +47,5 @@
 		"uuid": "^9.0.1",
 		"vite": "^4.4.2"
 	},
-	"type": "module",
-	"release-it": {
-		"git": {
-			"tag": true
-		},
-		"github": {
-			"release": true
-		},
-		"npm": {
-			"publish": false
-		}
-	}
+	"type": "module"
 }
