--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "opennem-app",
-	"version": "0.10.0",
+	"version": "0.10.1",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
@@ -11,7 +11,8 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
 		"changeset": "npx changeset",
-		"changeset:version": "npx changeset version"
+		"changeset:version": "npx changeset version",
+		"changeset:publish": "npx changeset publish"
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.27.1",
