--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
+		"release": "release-it",
 		"changeset": "npx changeset",
 		"changeset:version": "npx changeset version",
 		"changeset:publish": "npx changeset publish"
@@ -42,6 +43,7 @@
 		"postcss": "^8.4.31",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
+		"release-it": "^17.1.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.4.1",
@@ -49,5 +51,16 @@
 		"uuid": "^9.0.1",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"release-it": {
+		"git": {
+			"tag": true
+		},
+		"github": {
+			"release": true
+		},
+		"npm": {
+			"publish": false
+		}
+	}
 }
