--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"release-it": "^17.1.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"svelte-popperjs": "^1.3.2",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.0.0",
 		"uuid": "^9.0.1",
