test out mixpanel

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,7 @@ PUBLIC_JSON_API=''
 PUBLIC_FLOWS_API=''
 PUBLIC_EMISSIONS_API=''
 PUBLIC_PRICE_API=''
+
+# MixPanel
+MIXPANEL_API_KEY=
+MIXPANEL_TRACKING_ON=
