add EXPLORE_URL to env.example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Base URL, for locking down proxied API requests
 BASE_URL=localhost:5173
 
+# Explore URL
+EXPLORE_URL=https://explore.opennem.org.au
+
 # Sanity details
 PUBLIC_SANITY_PROJECT_ID=''
 PUBLIC_SANITY_DATASET=''
