--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 BASE_URL=localhost:5173
 
 # Explore URL
-EXPLORE_URL=https://explore.opennem.org.au
+PUBLIC_EXPLORE_URL=https://explore.opennem.org.au
 
 # Sanity details
 PUBLIC_SANITY_PROJECT_ID=''
