--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"devDependencies": {
 		"@portabletext/svelte": "^2.1.7",
+		"@resvg/resvg-js": "^2.6.2",
 		"@sanity/client": "^6.5.0",
 		"@sanity/image-url": "^1.0.2",
 		"@svelte-put/shortcut": "^3.1.0",
@@ -41,6 +42,8 @@
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"release-it": "^17.1.1",
+		"satori": "^0.10.13",
+		"satori-html": "^0.3.2",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"svelte-popperjs": "^1.3.2",
