--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@portabletext/svelte": "^2.1.7",
 		"@sanity/client": "^6.5.0",
 		"@sanity/image-url": "^1.0.2",
+		"@svelte-put/clickoutside": "^3.0.1",
 		"@svelte-put/shortcut": "^3.1.0",
 		"@sveltejs/adapter-cloudflare": "^4.4.0",
 		"@sveltejs/kit": "^2.0.0",
