remove unused data

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,7 @@ GOOGLE_SHEET_TAB_ID=OpenElectricity
 ADMIN_LOGIN=''
 
 # JSONs
+PUBLIC_JSON_URL=''
 PUBLIC_JSON_API=''
 PUBLIC_FLOWS_API=''
 PUBLIC_EMISSIONS_API=''
