--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"release-it": "^17.1.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"svelte-dnd-action": "^0.9.47",
 		"svelte-popperjs": "^1.3.2",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.0.0",
