--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"eslint-plugin-svelte": "^2.30.0",
 		"js-base64": "^3.7.7",
 		"layercake": "^8.0.2",
+		"lz-string": "^1.5.0",
 		"postcss": "^8.4.31",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
