--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.0.0",
 		"uuid": "^9.0.1",
-		"vite": "^5.0.0"
+		"vite": "^5.0.0",
+		"vitest": "^2.0.4"
 	},
 	"type": "module",
 	"release-it": {
@@ -63,8 +64,5 @@
 		"npm": {
 			"publish": false
 		}
-	},
-	"dependencies": {
-		"vitest": "^2.0.4"
 	}
 }
