--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"release": "release-it"
+		"release": "release-it",
+		"test": "vitest"
 	},
 	"devDependencies": {
 		"@portabletext/svelte": "^2.1.7",
