--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"release": "npx changeset version"
+		"release": "npx changeset version",
+		"test": "vitest",
+		"coverage": "vitest run --coverage"
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.27.7",
@@ -28,6 +30,7 @@
 		"@types/d3-format": "^3.0.4",
 		"@types/d3-scale": "^4.0.8",
 		"@types/d3-shape": "^3.1.6",
+		"@vitest/coverage-v8": "^2.1.1",
 		"autoprefixer": "^10.4.20",
 		"chroma-js": "^2.6.0",
 		"d3-array": "^3.2.4",
@@ -50,7 +53,8 @@
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.5.4",
 		"uuid": "^9.0.1",
-		"vite": "^5.4.0"
+		"vite": "^5.4.0",
+		"vitest": "^2.1.1"
 	},
 	"type": "module"
 }
