--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,8 @@ PUBLIC_FLOWS_API=''
 PUBLIC_EMISSIONS_API=''
 PUBLIC_PRICE_API=''
 PUBLIC_API_KEY=
+
+# FEATURE FLAGS
+PUBLIC_FEATURE_FLAGS='{
+  "show_records": false
+}'
