setup to query ember bridge api

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,9 @@ PUBLIC_EMISSIONS_API=''
 PUBLIC_PRICE_API=''
 PUBLIC_API_KEY=
 
+# Ember Bridge API
+PUBLIC_EMBER_BRIDGE_API=''
+
 # FEATURE FLAGS
 PUBLIC_FEATURE_FLAGS='{
   "show_records": false
