--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.27.7",
-		"@portabletext/svelte": "^2.1.11",
+		"@chienleng/svelte-portabletext": "^2.1.11",
 		"@sanity/client": "^6.21.1",
 		"@sanity/image-url": "^1.0.2",
 		"@svelte-put/clickoutside": "^3.0.2",
