update supported engine

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.20.1",
 	"private": true,
 	"engines": {
-		"node": ">=22.0.0"
+		"node": ">=v18.17.1"
 	},
 	"scripts": {
 		"dev": "vite dev",
