--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"release": "npx changeset version"
+		"release": "npx changeset version",
+		"test": "vitest"
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.27.7",
@@ -53,7 +54,8 @@
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.5.4",
 		"uuid": "^9.0.1",
-		"vite": "^5.4.4"
+		"vite": "^5.4.4",
+		"vitest": "^2.1.8"
 	},
 	"type": "module"
 }
