--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"devDependencies": {
 		"@changesets/cli": "^2.27.7",
 		"@chienleng/portabletext-svelte-5": "^3.0.0",
+		"@openelectricity/client": "^0.4.0",
 		"@sanity/client": "^6.21.1",
 		"@sanity/image-url": "^1.0.2",
 		"@svelte-put/clickoutside": "^4.0.0",
