--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"js-base64": "^3.7.7",
 		"layercake": "^8.4.2",
 		"lz-string": "^1.5.0",
+		"openelectricity": "^0.5.0",
 		"postcss": "^8.4.41",
 		"prettier": "^3.1.0",
 		"prettier-plugin-svelte": "^3.2.6",
