--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.28.1",
-		"@chienleng/portabletext-svelte-5": "^3.0.0",
+		"@portabletext/svelte": "^3.0.0",
 		"@sanity/client": "^6.28.4",
 		"@sanity/image-url": "^1.1.0",
 		"@svelte-put/clickoutside": "^4.0.0",
