--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"svelte-check": "^4.1.5",
 		"svelte-dnd-action": "^0.9.60",
 		"svelte-popperjs": "^1.3.2",
+		"sveltekit-embed": "^0.0.20",
 		"tailwindcss": "^3.4.17",
 		"typescript": "^5.8.3",
 		"vite": "^5.4.17",
