--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ PUBLIC_EXPLORE_URL=https://explore.opennem.org.au
 # Sanity details
 PUBLIC_SANITY_PROJECT_ID=''
 PUBLIC_SANITY_DATASET=''
+SANITY_TOKEN=''
 
 # Records API
 PUBLIC_RECORDS_API=''
