--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Base URL, for locking down proxied API requests
 BASE_URL=localhost:5173
 
+# Login for viewing draft articles
+ARTICLE_LOGIN=
+
 # Explore URL
 PUBLIC_EXPLORE_URL=https://explore.opennem.org.au
 
