--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
 		"@sveltejs/kit": "^2.20.4",
 		"@sveltejs/vite-plugin-svelte": "^4.0.4",
 		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/postcss": "^4.1.11",
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/chroma-js": "^2.4.5",
 		"@types/d3-format": "^3.0.4",
 		"@types/d3-scale": "^4.0.9",
 		"@types/d3-shape": "^3.1.7",
-		"autoprefixer": "^10.4.21",
 		"chroma-js": "^2.6.0",
 		"d3-array": "^3.2.4",
 		"d3-interpolate": "^3.0.1",
@@ -54,7 +54,7 @@
 		"svelte-dnd-action": "^0.9.60",
 		"svelte-popperjs": "^1.3.2",
 		"sveltekit-embed": "^0.0.20",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.1.11",
 		"typescript": "^5.8.3",
 		"vite": "^5.4.17",
 		"vitest": "^2.1.9"
