--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,8 +8,21 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true
-	}
+		"strict": true,
+		"jsx": "preserve",
+		"jsxImportSource": "svelte",
+		"types": ["node", "svelte"]
+	},
+	"include": [
+		"./src/**/*.js",
+		"./src/**/*.svelte",
+		"./src/**/*.ts",
+		"./src/**/*.d.ts"
+	],
+	"exclude": [
+		"node_modules",
+		".svelte-kit"
+	]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias and https://kit.svelte.dev/docs/configuration#files
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
