--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.28.1",
+		"@lucide/svelte": "^0.537.0",
 		"@portabletext/svelte": "^3.0.0",
 		"@sanity/client": "^6.29.1",
 		"@sanity/image-url": "^1.1.0",
@@ -33,7 +34,10 @@
 		"@types/d3-format": "^3.0.4",
 		"@types/d3-scale": "^4.0.9",
 		"@types/d3-shape": "^3.1.7",
+		"bits-ui": "^2.9.2",
 		"chroma-js": "^2.6.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"d3-array": "^3.2.4",
 		"d3-interpolate": "^3.0.1",
 		"date-fns": "^2.30.0",
@@ -54,7 +58,10 @@
 		"svelte-dnd-action": "^0.9.60",
 		"svelte-popperjs": "^1.3.2",
 		"sveltekit-embed": "^0.0.20",
+		"tailwind-merge": "^3.3.1",
+		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^4.1.11",
+		"tw-animate-css": "^1.3.6",
 		"typescript": "^5.8.3",
 		"vite": "^5.4.17",
 		"vitest": "^2.1.9"
