--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.28.1",
+		"@internationalized/date": "^3.9.0",
 		"@lucide/svelte": "^0.537.0",
 		"@portabletext/svelte": "^3.0.0",
 		"@sanity/client": "^6.29.1",
@@ -56,6 +57,7 @@
 		"svelte": "^5.25.7",
 		"svelte-check": "^4.1.5",
 		"svelte-dnd-action": "^0.9.60",
+		"svelte-maplibre-gl": "^1.0.1",
 		"svelte-popperjs": "^1.3.2",
 		"sveltekit-embed": "^0.0.20",
 		"tailwind-merge": "^3.3.1",
