--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
 		"release": "npx changeset version",
-		"test": "vitest"
+		"test": "vitest",
+		"test:e2e": "playwright test",
+		"test:e2e:ui": "playwright test --ui",
+		"test:e2e:debug": "playwright test --headed"
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.28.1",
 		"@internationalized/date": "^3.9.0",
 		"@lucide/svelte": "^0.537.0",
+		"@playwright/test": "^1.57.0",
 		"@portabletext/svelte": "^3.0.0",
 		"@sanity/client": "^6.29.1",
 		"@sanity/image-url": "^1.1.0",
