chore: update dependencies and migrate to ESLint 9 flat config
- Update 26 packages within semver ranges (svelte, @sveltejs/kit, tailwindcss, bits-ui, typescript, eslint, prettier, etc.)
- Migrate ESLint to v9 flat config format (eslint.config.js)
- Remove deprecated .eslintrc.cjs and .eslintignore
- Remove deprecated pluginSearchDirs from .prettierrc and package.json scripts
- Add vitest config to exclude e2e tests from unit test runs
- Add UPGRADE_PLAN.md documenting remaining major version upgrades

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write .",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write .",
 		"release": "npx changeset version",
 		"test": "vitest",
 		"test:e2e": "playwright test",
@@ -21,6 +21,7 @@
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.28.1",
+		"@eslint/js": "^9.39.2",
 		"@internationalized/date": "^3.9.0",
 		"@lucide/svelte": "^0.537.0",
 		"@playwright/test": "^1.57.0",
@@ -50,6 +51,7 @@
 		"eslint": "^9.24.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.1",
+		"globals": "^17.0.0",
 		"js-base64": "^3.7.7",
 		"layercake": "^8.4.3",
 		"lz-string": "^1.5.0",
