chore: replace changesets with npm version scripts

--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"release": "npx changeset version",
+		"version:patch": "npm version patch",
+		"version:minor": "npm version minor",
+		"version:major": "npm version major",
 		"test": "vitest",
 		"test:e2e": "playwright test",
 		"test:e2e:ui": "playwright test --ui",
 		"test:e2e:debug": "playwright test --headed"
 	},
 	"devDependencies": {
-		"@changesets/cli": "^2.28.1",
 		"@eslint/js": "^9.39.2",
 		"@internationalized/date": "^3.9.0",
 		"@lucide/svelte": "^0.537.0",
