--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "open-electriciy-web",
 	"version": "3.14.2",
 	"private": true,
+	"packageManager": "bun@1.3.5",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
