--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
 	"name": "open-electriciy-web",
 	"version": "3.14.2",
 	"private": true,
-	"packageManager": "bun@1.3.5",
+	"engines": {
+		"node": ">=v22.12.0"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
