Add solar heatmap visualization at /studio/solar
Canvas-based heatmap showing solar's growing share of NEM generation
from 2016-2025. Features hero chart with hover tooltip, animated
thumbnail timeline with scroll-snap, glass highlight effect, play/pause
animation, and CSV data export. Includes data pipeline scripts for
regenerating heatmap JSON from the OpenElectricity API.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
 		"test": "vitest",
 		"test:e2e": "playwright test",
 		"test:e2e:ui": "playwright test --ui",
-		"test:e2e:debug": "playwright test --headed"
+		"test:e2e:debug": "playwright test --headed",
+		"data:fetch-power": "node scripts/solar-heatmap/fetch-power.js",
+		"data:build-solar": "node scripts/solar-heatmap/build.js",
+		"data:export-solar-csv": "node scripts/solar-heatmap/export-csv.js"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.39.2",
